WIP - add reaction
