# pkg/server/react.go
@@ -1,0 +1,13 @@
+package server
+
+import "github.com/gin-gonic/gin"
+
+func (h handler) GetReactList(c *gin.Context) {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (h handler) AddReact(c *gin.Context) {
+	//TODO implement me
+	panic("implement me")
+}
